--- a/site/index.html
+++ b/site/index.html
@@ -7,6 +7,6 @@
 <h1>Hello World</h1>
 <p>Some more text</p>
 <p>hmmmmmm</p>
-<button>Click</button>
+<button onclick="alert('hello World');">Click</button>
 </body>
 </html>
