--- a/site/index.html
+++ b/site/index.html
@@ -7,6 +7,7 @@
 <h1>Hello World</h1>
 <p>Some more text</p>
 <p>hmmmmmm</p>
+<p>another test </p>
 <button onclick="alert('hello World, or not!');">Click</button>
 </body>
 </html>
