okay I am only testing this editor for commit msgokay I am only testing this editor for commit msg

--- a/site/index.html
+++ b/site/index.html
@@ -9,5 +9,6 @@
 <p>hmmmmmm</p>
 <p>another test </p>
 <button onclick="alert('hello World, or not!');">Click</button>
+<p style="color:red;">Some more testing </p>
 </body>
 </html>
